--- a/src/assets/styles/homepage.less
+++ b/src/assets/styles/homepage.less
@@ -9,13 +9,12 @@
 
 h1.section-title {
   position: relative;
-  width: 100%;
   margin: 0;
   text-align: center;
   white-space: nowrap;
 
   div {
-    position: absolute;
+    position: absolute !important;
     display: inline-block;
 
     &::before {
@@ -52,8 +51,6 @@ h1.section-title {
 }
 
 p.section-subtitle {
-  position: relative;
-  width: 100%;
   margin: 0;
   margin-top: 20px;
 
