Implement section footer

--- a/src/styles/homepage.less
+++ b/src/styles/homepage.less
@@ -1,5 +1,6 @@
 @base-font: Helvetica, Arial, sans-serif;
 @theme-font: 'Satoshi', @base-font;
+@font-SGMVB: 'Solano Gothic MVB', @base-font;
 @theme-color: #68DFE3;
 @black: #000000;
 @white: #FFFFFF;
@@ -40,7 +41,7 @@ h1.section-title {
   span {
     position: relative;
     left: 12px;
-    font-family: 'Solano Gothic MVB', @base-font;
+    font-family: @font-SGMVB;
     font-style: normal;
     font-weight: 700;
     font-size: 120px;
